# django-snacks

./: README.md  pyproject.toml
django_snacks/: db.sqlite3
django_snacks/snacks/: tests.py  urls.py  views.py
django_snacks/snacks_project/: settings.py
django_snacks/templates/: base.html
